# Scalpel-Recognition-YOLOv11-FasterRCNN

./: LICENSE  README.md  pyproject.toml  requirements.txt  task3.ipynb
yolo11x_scalpel_AdamW_e-5/: args.yaml  results.csv
yolo11x_scalpel_AdamW_e-5/weights/: location.txt
